@@ -1,0 +1,14 @@
+from Code import Bond
+
+#########################################################
+#           PArt1: SHORT AND LONGTERM BONDS             #
+#########################################################
+
+
+
+# TEST
+
+STBond = Bond.ShortTerm(1000, 100)
+LTBond = Bond.LongTerm(3000, 100)
+
+print(STBond.coumpoundedInterest(100))
